--- a/views/stuindex.ejs
+++ b/views/stuindex.ejs
@@ -18,7 +18,7 @@
 
 <body>
   <div class="welcome-message">
-    Welcome, !
+    Welcome!
   </div>
   <!-- partial:index.partial.html -->
   <section>
